--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell Sign Up</title>
     <link rel="stylesheet" href="/src/css/Login.css">
-    <script></script>
+    <script type="module" src="/src/js/login.js"> </script>
 </head>
 <html lang="en">
 <head>
@@ -29,7 +29,7 @@
         
             <input type="password" id="login-password" placeholder="Password" required>
             
-            <button type="submit">Login</button>
+            <button type="submit" id="login-button">Login</button>
             <hr class="line2">
 
             <h2>Don't have an account? <a href="Signup.html">Signup</a></h2>
