--- a/Login.html
+++ b/Login.html
@@ -25,6 +25,8 @@
             <hr class="line2">
 
             <h2>Don't have an account? <a href="Signup.html">Signup</a></h2>
+                <br><br>
+            <a href = "index.html">main page here</a>
         </form>
     </div>
 </body>
