--- a/index.html
+++ b/index.html
@@ -4,40 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell New & Featured</title>
-    <link rel="stylesheet" href="index.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    
 </head>
 <body>
     <header>
         <div class="navbar">
-            <div class="logo">
-                <img src="pngs/Mokesell.png" alt="mainlogo">
-            </div>
-            <nav>
+            <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
+            <nav>   
                 <ul>
                     <a class="newf" href="index.html">New & Featured</a>
                     <a class="newf" href="Men.html">Men</a>
                     <a class="newf" href="Women.html">Women</a>
                     <a class="newf" href="Kids.html">Kids</a>
                     <a class="newf" href="Sale.html">Sale</a>
+                    <a href="dashboard/listing.html"><button>Sell</button></a>
                 </ul>
             </nav>
-
-            <div class="profile-container">
-                <img src="pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown()">
-                <div class="dropdown" id="dropdownMenu">
-                    <button>Settings</button>
-                    <button onclick="logoutUser()">Logout</button>
-                </div>
-            </div>
         </div>  
     </header>
 
     <main>
         <h1 class="headername">New & Featured</h1>
         <div class="listing-container">
-            <p><a href=""><img src = "pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class = "Sambas"></a></p>
-            <div class="listing-card"></div>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
+                </a>
+                <p>Adidas Sambas White</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+            <a href="#">
+                <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+            </a>
+            <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                </a>
+                <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                </a>
+                <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                </a>
+                <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                </a>
+                <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                </a>
+                <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                </a>
+                <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
+            <!--Air Jordans 4 Retro Card-->>
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                </a>
+                <p>Air Jordan 4 Retro 'White Thunder'</p>
+            </div>
         </div>
+    </div>
+
     </main>
 </body>
