added profile drop down to nav bar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell New & Featured</title>
     <link rel="stylesheet" href="css/index.css">
+    <script src="script.js"></script>
     
 </head>
 <body>
@@ -17,10 +18,17 @@
                     <a class="newf" href="Men.html">Men</a>
                     <a class="newf" href="Women.html">Women</a>
                     <a class="newf" href="Kids.html">Kids</a>
-                    <a class="newf" href="Sale.html">Sale</a>
-                    <a href="dashboard/listing.html"><button>Sell</button></a>
+                    <a class="newf" href="Sale.html" >Sale</a>
+                    <a href="dashboard/listing.html" id = "sellbutton" >Sell</a>
                 </ul>
             </nav>
+            <div class="profile-container">
+                <img src="pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown()">
+                <div class="dropdown" id="dropdownMenu">
+                    <button>Settings</button>
+                    <button onclick="logoutUser()">Logout</button>
+                </div>
+            </div>
         </div>  
     </header>
 
