css for listing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a class="newf" href="Women.html">Women</a>
                     <a class="newf" href="Kids.html">Kids</a>
                     <a class="newf" href="Sale.html" >Sale</a>
-                    <a href="dashboard/listing.html" id = "sellbutton" >Sell</a>
+                    <a href="listing.html" id = "sellbutton" >Sell</a>
                 </ul>
             </nav>
             <div class="profile-container">
