make listing pages and dummy products

--- a/Kids.html
+++ b/Kids.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell New & Featured</title>
-    <link rel="stylesheet" href="Women.css">
+    <link rel="stylesheet" href="Kids.css">
     <script src="script.js"></script>
     
 </head>
@@ -34,80 +34,80 @@
 
     <main>
         <h1 class="headername">New & Featured</h1>
-
         <div class="listing-container">
 
-            <!--Vomero 5 Card-->
+             <!--jordan 4 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Jordan 4 Kids "Military Black"</p>
             </div>
 
-            <!--Vomero 5 Card-->
-            <div class="listing-card">
-            <a href="#">
-                <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
-            </a>
-            <p>Vomero 5 "Pink Foam"</p>
-            </div>
-
-            <!--Vomero 5 Card-->
+           <!--jordan 4 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Jordan 4 Kids "Military Black"</p>
             </div>
 
-             <!--Vomero 5 Card-->
-             <div class="listing-card">
+           <!--jordan 4 kids Card-->
+           <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
-            </div>
+                <p>Jordan 4 Kids "Military Black"</p>
+             </div>
 
-            <!--Vomero 5 Card-->
+             <!--jordan 4 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Jordan 4 Kids "Military Black"</p>
             </div>
 
-            <!--Vomero 5 Card-->
+            <!--jordan 4 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Jordan 4 Kids "Military Black"</p>
             </div>
 
-            <!--Vomero 5 Card-->
+            <!--jordan 4 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Jordan 4 Kids "Military Black"</p>
             </div>
 
-            <!--Vomero 5 Card-->
+            <!--jordan 4 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>         
+                <p>Jordan 4 Kids "Military Black"</p>
+            </div>
+
+            <!--jordan 4 kids Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
+                </a>
+                <p>Jordan 4 Kids "Military Black"</p>
+            </div>
+
+             <!--jordan 4 kids Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/jordan 4 kids.webp" class="jordan4kids" alt="jordan 4 kids ">
+                </a>
+                <p>Jordan 4 Kids "Military Black"</p>
             </div>
             
-             <!--Vomero 5 Card-->
-             <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
-                </a>
-                <p>Vomero 5 "Pink Foam"</p>
-            </div>
         </div>
     </div>
 
