--- a/index.html
+++ b/index.html
@@ -35,67 +35,76 @@
     <main>
         <h1 class="headername">New & Featured</h1>
         <div class="listing-container">
+            <!--Kobe grinch Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/kobegrinchdefault.png" class="kobe6" alt="Kobe 6 grinch">
+                </a>
+                <P>Kobe 6 "Grinch"</P>
+            </div>
+
+            <!--Gt cut 3s Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/gtcut3.webp" class="GTCUT" alt="Gt Cut 3">
+                </a>
+                <p>Gt Cut 3 "Picante Red"</p>
+            </div>
+
+                <!--Kobe 5 xray Card-->
+                <div class="listing-card">
+                    <a href="#">
+                        <img src="pngs/kobe5xray.jpg" class="kobe5" alt="Kobe 5 XRAY">
+                    </a>
+                    <p>Kobe 5 "X-RAY"</p>
+                </div>
+
+            <!--Vomero 5 Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                </a>
+                <p>Vomero 5 "Pink Foam"</p>         
+            </div>
+            
+            <!--Vomero 5 Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                </a>
+                <p>Vomero 5 "Pink Foam"</p>         
+            </div>
+
+            <!--Kobe 5 xray Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="pngs/kobe5xray.jpg" class="kobe5" alt="Kobe 5 XRAY">
+                </a>
+                <p>Kobe 5 "X-RAY"</p>
+            </div>
+
+            <!--Sambas Card-->
             <div class="listing-card">
                 <a href="#">
                     <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
                 </a>
                 <p>Adidas Sambas White</p>
             </div>
-            <!--Air Jordans 4 Retro Card-->>
-            <div class="listing-card">
-            <a href="#">
-                <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-            </a>
-            <p>Air Jordan 4 Retro 'White Thunder'</p>
-            </div>
-            <!--Air Jordans 4 Retro Card-->>
+
+            <!--Kobe grinch Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                    <img src="pngs/kobegrinchdefault.png" class="kobe6" alt="Kobe 6 grinch">
                 </a>
-                <p>Air Jordan 4 Retro 'White Thunder'</p>
+                <P>Kobe 6 "Grinch"</P>
             </div>
-            <!--Air Jordans 4 Retro Card-->>
+            
+            <!--Gt cut 3s Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
+                    <img src="pngs/gtcut3.webp" class="GTCUT" alt="Gt Cut 3">
                 </a>
-                <p>Air Jordan 4 Retro 'White Thunder'</p>
-            </div>
-            <!--Air Jordans 4 Retro Card-->>
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-                </a>
-                <p>Air Jordan 4 Retro 'White Thunder'</p>
-            </div>
-            <!--Air Jordans 4 Retro Card-->>
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-                </a>
-                <p>Air Jordan 4 Retro 'White Thunder'</p>
-            </div>
-            <!--Air Jordans 4 Retro Card-->>
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-                </a>
-                <p>Air Jordan 4 Retro 'White Thunder'</p>
-            </div>
-            <!--Air Jordans 4 Retro Card-->>
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-                </a>
-                <p>Air Jordan 4 Retro 'White Thunder'</p>
-            </div>
-            <!--Air Jordans 4 Retro Card-->>
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-                </a>
-                <p>Air Jordan 4 Retro 'White Thunder'</p>
+                <p>Gt Cut 3 "Picante Red"</p>
             </div>
         </div>
     </div>
