Add functionality for signup, login.

--- a/auth/signup.html
+++ b/auth/signup.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell Sign Up</title>
     <link rel="stylesheet" href="/css/signup.css">
-    <script></script>
+    <script type="module" src="/js/signup.js"></script>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
             <input type="password" id="signup-password" placeholder="Password" required>
             
             <input type="password" id="signup-repassword" placeholder="Confirm Password" required>
-            <button type="submit">Sign up</button>
+            <button id="signup-button" type="submit">Sign up</button>
             <hr class="line2">
 
             <h2>Already have an account?<a href="Login.html">Login</a></h2>
