--- a/dashboard/snake.html
+++ b/dashboard/snake.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ccb yx</title>
-    <style src="/css/snake.css"></style>
+    <link rel="stylesheet" href="/css/snake.css">
 </head>
 
 <body>
