--- a/auth/login.html
+++ b/auth/login.html
@@ -21,7 +21,7 @@
         
             <input type="password" id="login-password" placeholder="Password" required>
             
-            <button type="submit">Login</button>
+            <button id="login-button" type="submit">Login</button>
             <hr class="line2">
 
             <h2>Don't have an account? <a href="Signup.html">Signup</a></h2>
