--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell New & Featured</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <h1 class="headername">New & Featured</h1>
+        <div class="headername">New & Featured</div>
         <div class="listing-container">
             <div class="listing-card">
                 <a href="#">
