--- a/viewer/aboutUs.html
+++ b/viewer/aboutUs.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell New & Featured</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <script type="module" src="/js/index.js"></script>
+    <link rel="stylesheet" href="/css/">
 </head>
 <body>
     <header>
@@ -23,18 +22,3 @@
             </nav>
         </div>  
     </header>
-
-    <main>
-        <div class="headername">New & Featured</div>
-        <div class="listing-container">
-            <!-- to be filled with data -->
-              <!--Air Jordans 4 Retro Card-->
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-                </a>
-                <p>Air Jordan 4 Retro 'White Thunder</p>
-            </div>
-        </div>
-    </main>
-</body>
