--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
             <nav>   
                 <ul>
-                    <a class="newf" href="index.html">New & Featured</a>
+                    <a class="newf" href="index.html">New & Featured</a>    
                     <a class="newf" href="Men.html">Men</a>
                     <a class="newf" href="Women.html">Women</a>
                     <a class="newf" href="Kids.html">Kids</a>
@@ -21,6 +21,13 @@
                     <a href="/dashboard/listing.html"><button>Sell</button></a>
                 </ul>
             </nav>
+            <div class="profile-container">
+                <img src="pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown(event)">
+                <div class="dropdown" id="dropdownMenu">
+                    <button>Settings</button>
+                    <button onclick="logoutUser()">Logout</button>
+                </div>
+            </div>
         </div>  
     </header>
 
@@ -37,4 +44,33 @@
             </div>
         </div>
     </main>
+    <script>
+        // Function to toggle the dropdown visibility
+        function toggleDropdown() {
+            let dropdown = document.getElementById("dropdownMenu");
+
+            // Toggle the display of the dropdown menu
+            if (dropdown) {
+                dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
+            }
+        }
+
+        // Close the dropdown if clicked outside of the dropdown or profile icon
+        window.onclick = function(event) {
+            let dropdown = document.getElementById("dropdownMenu");
+
+            // Close dropdown if the click is outside the dropdown or profile icon
+            if (!event.target.matches('.profile-icon') && !event.target.closest('#dropdownMenu')) {
+                if (dropdown) {
+                    dropdown.style.display = "none";
+                }
+            }
+        };
+
+        // Logout function (you can customize this as per your requirement)
+        function logoutUser() {
+            // Redirecting to login page
+            window.location.href = "auth/login.html";  // Modify the URL as necessary
+        }
+    </script>
 </body>
