add sample Listings and feedback

--- a/dashboard/Kids.html
+++ b/dashboard/Kids.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell New & Featured</title>
-    <link rel="stylesheet" href="Women.css">
+    <link rel="stylesheet" href="Kids.css">
     
 </head>
 <body>
@@ -13,16 +13,16 @@
             <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
             <nav>   
                 <ul>
-                    <a class="newf" href="index.html">New & Featured</a>
-                    <a class="newf" href="Men.html">Men</a>
-                    <a class="newf" href="Women.html">Women</a>
-                    <a class="newf" href="Kids.html">Kids</a>
-                    <a class="newf" href="Sale.html" >Sale</a>
-                    <a href="dashboard/listing.html" id = "sellbutton" >Sell</a>
+                    <a class="newf" href="/index.html">New & Featured</a>
+                    <a class="newf" href="/dashboard/Men.html">Men</a>
+                    <a class="newf" href="/dashboard/women.html">Women</a>
+                    <a class="newf" href="/dashboard/Kids.html">Kids</a>
+                    <a class="newf" href="/dashboard/Sale.html" >Sale</a>
+                    <a href="listing.html" id = "sellbutton" >Sell</a>
                 </ul>
             </nav>
             <div class="profile-container">
-                <img src="pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown()">
+                <img src="/pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown(event)">
                 <div class="dropdown" id="dropdownMenu">
                     <button>Settings</button>
                     <button onclick="logoutUser()">Logout</button>
@@ -33,84 +33,83 @@
 
     <main>
         <h1 class="headername">New & Featured</h1>
-
         <div class="listing-container">
 
-            <!--Vomero 5 Card-->
+             <!--jordan 3 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="/pngs/jordan 3 retro kids.png" class="jordan3kids" alt="jordan 3 retro kids">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Jordan 3 Retro Kids</p>
             </div>
 
-            <!--Vomero 5 Card-->
-            <div class="listing-card">
-            <a href="#">
-                <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
-            </a>
-            <p>Vomero 5 "Pink Foam"</p>
-            </div>
-
-            <!--Vomero 5 Card-->
+           <!--kobe9 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="/pngs/kobe9halo.png" class="kobe9halo" alt="kobe9halo">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Kobe 9 "Halo" Kids</p>
             </div>
 
-             <!--Vomero 5 Card-->
-             <div class="listing-card">
+           <!--Lebron 22 kids Card-->
+           <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="/pngs/lebron22.png" class="lebron22" alt="lebron22">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
-            </div>
+                <p>Lebron 22 "Crimson Obsidian" kids</p>
+             </div>
 
-            <!--Vomero 5 Card-->
+             <!--imo 4 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="/pngs/immortality4.png" class="immortality4" alt="immortality4">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Giannis Immortality 4</p>
             </div>
 
-            <!--Vomero 5 Card-->
+            <!--court kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="/pngs/court borough bred.png" class="court" alt="court ">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>JNike Court Borough "Bred" Kids </p>
             </div>
 
-            <!--Vomero 5 Card-->
+            <!--airmax270 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="/pngs/airmax270.png" class="airmax270" alt="airmax270">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>
+                <p>Airmax 270 Black Kids</p>
             </div>
 
-            <!--Vomero 5 Card-->
+            <!--airmax1 kids Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
+                    <img src="/pngs/airmax1.png" class="airmax1" alt="airmax1">
                 </a>
-                <p>Vomero 5 "Pink Foam"</p>         
+                <p>Airmax 1 Kids</p>
+            </div>
+
+            <!--aqua swoosh kids Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="/pngs/aqua swoosh.png" class="aqua swoosh" alt="aqua swoosh">
+                </a>
+                <p>Nike Aqua Swoosh Black</p>
+            </div>
+
+             <!--MAXIMUM AURA kids Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="/pngs/maxaura6.png" class="maxaura6" alt="maxaura6">
+                </a>
+                <p>Jordan Max Aura 6 Kids</p>
             </div>
             
-             <!--Vomero 5 Card-->
-             <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/vomero5.jpg" class="VOMERO" alt="Pink Sambas">
-                </a>
-                <p>Vomero 5 "Pink Foam"</p>
-            </div>
         </div>
     </div>
 
-    </main>
     <script>
         // Function to toggle the dropdown visibility
         function toggleDropdown() {
@@ -140,4 +139,6 @@
             window.location.href = "auth/login.html";  // Modify the URL as necessary
         }
     </script>
+
+    </main>
 </body>
