--- a/dashboard/Men.html
+++ b/dashboard/Men.html
@@ -13,16 +13,16 @@
             <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
             <nav>   
                 <ul>
-                    <a class="newf" href="index.html">New & Featured</a>
-                    <a class="newf" href="Men.html">Men</a>
-                    <a class="newf" href="Women.html">Women</a>
-                    <a class="newf" href="Kids.html">Kids</a>
-                    <a class="newf" href="Sale.html" >Sale</a>
-                    <a href="dashboard/listing.html" id = "sellbutton" >Sell</a>
+                    <a class="newf" href="/index.html">New & Featured</a>
+                    <a class="newf" href="/dashboard/Men.html">Men</a>
+                    <a class="newf" href="/dashboard/women.html">Women</a>
+                    <a class="newf" href="/dashboard/Kids.html">Kids</a>
+                    <a class="newf" href="/dashboard/Sale.html" >Sale</a>
+                    <a href="listing.html" id = "sellbutton" >Sell</a>
                 </ul>
             </nav>
             <div class="profile-container">
-                <img src="pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown()">
+                <img src="/pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown()">
                 <div class="dropdown" id="dropdownMenu">
                     <button>Settings</button>
                     <button onclick="logoutUser()">Logout</button>
@@ -35,75 +35,75 @@
         <h1 class="headername">New & Featured</h1>
         <div class="listing-container">
 
-             <!--Sambas Card-->
+             <!--invincible Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
+                    <img src="/pngs/invincible 3.jpg" class="invincible" alt="invincible">
                 </a>
-                <p>Adidas Sambas White</p>
+                <p>Nike Invincible 3 Black</p>
             </div>
 
-            <!--Sambas Card-->
+            <!--jordan4 Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
+                    <img src="/pngs/jordan4whitethunder.png" class="jordan4" alt="Jordan 4">
                 </a>
-                <p>Adidas Sambas White</p>
+                <p>AJordan 4 "White Thunder"</p>
 
             </div>
 
-           <!--Sambas Card-->
+           <!--Sb Card-->
            <div class="listing-card">
             <a href="#">
-                <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
+                <img src="/pngs/sb dunk low.jpg" class="sb" alt="sb">
             </a>
-            <p>Adidas Sambas White</p>
+            <p>SB Dunk Low "Gorge Green"</p>
+            </div>
+
+             <!--freak6 Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="/pngs/Freak6.png" class="Freak6" alt="Freak6">
+                </a>
+                <p>Giannis Freak 6 "Candy Funhouse"</p>
+            </div>
+
+            <!--ja2 Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="/pngs/ja2heart.png" class="ja2" alt="ja2heart">
+                </a>
+                <p>Ja 2 "Heart Eyes"</p>
+            </div>
+
+            <!--book Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="/pngs/book1.png" class="book1" alt="book1">
+                </a>
+                <p>Book 1 "Lilac Bloom"</p>
+            </div>
+
+            <!--gtcutelectric Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="/pngs/gtcut3electric.png" class="gtcut3electric" alt="gtcut3electric">
+                </a>
+                <p>Gt Cut 3 "Electric"</p>
+            </div>
+
+            <!--kd17bred Card-->
+            <div class="listing-card">
+                <a href="#">
+                    <img src="/pngs/kd17bred.png" class="kd17bred" alt="kd17bred">
+                </a>
+                <p>KD 17 "Bred"</p>      
             </div>
 
              <!--Sambas Card-->
             <div class="listing-card">
                 <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
-                </a>
-                <p>Adidas Sambas White</p>
-            </div>
-
-            <!--Sambas Card-->
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
-                </a>
-                <p>Adidas Sambas White</p>
-            </div>
-
-            <!--Sambas Card-->
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
-                </a>
-                <p>Adidas Sambas White</p>
-            </div>
-
-            <!--Sambas Card-->
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
-                </a>
-                <p>Adidas Sambas White</p>
-            </div>
-
-            <!--Sambas Card-->
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
-                </a>
-                <p>Adidas Sambas White</p>      
-            </div>
-
-             <!--Sambas Card-->
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
+                    <img src="/pngs/Samba_OG_Shoes_White_B75806_01_00_standard.avif" class="sambas" alt="Adidas Sambas White">
                 </a>
                 <p>Adidas Sambas White</p>
                 
