--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
             <nav>   
                 <ul>
-                    <a class="newf" href="index.html">New & Featured</a>    
-                    <a class="newf" href="Men.html">Men</a>
-                    <a class="newf" href="Women.html">Women</a>
-                    <a class="newf" href="Kids.html">Kids</a>
-                    <a class="newf" href="Sale.html">Sale</a>
-                    <a href="/dashboard/listing.html"><button>Sell</button></a>
+                    <a class="newf" href="/index.html">New & Featured</a>
+                    <a class="newf" href="/dashboard/Men.html">Men</a>
+                    <a class="newf" href="/dashboard/women.html">Women</a>
+                    <a class="newf" href="/dashboard/Kids.html">Kids</a>
+                    <a class="newf" href="/dashboard/Sale.html" >Sale</a>
+                    <a href="dashboard/listing.html" id = "sellbutton" >Sell</a>
                 </ul>
             </nav>
             <div class="profile-container">
