fixing logout href destination

--- a/dashboard/Kids.html
+++ b/dashboard/Kids.html
@@ -136,7 +136,7 @@
         // Logout function (you can customize this as per your requirement)
         function logoutUser() {
             // Redirecting to login page
-            window.location.href = "auth/login.html";  // Modify the URL as necessary
+            window.location.href = "/auth/login.html";  // Modify the URL as necessary
         }
     </script>
 
