--- a/dashboard/Feedback.html
+++ b/dashboard/Feedback.html
@@ -88,7 +88,7 @@
 
   
         function logoutUser() {
-            window.location.href = "auth/login.html";   
+            window.location.href = "/auth/login.html";   
         }
     </script>
 </body> 
